--- a/HW3/weatherWeb.css
+++ b/HW3/weatherWeb.css
@@ -1,23 +1,569 @@
-@media(min-width: 1500px){
-	.gradient {
-		height: 500px;
+@media(max-width: 460px) {
+	#gradient {
+		height: 1000px;
+		width: 500px;
 		background-image: linear-gradient(rgb(73,138,220), rgb(98,59,156));
 	}
 
-	.weatherTitle {
+	.topText {
+		font-family: "IBM Plex Sans", sans-serif;
+		font-weight: 500;
 		position: relative;
+		top: 65px;
+	}
+
+
+	.localName, .localHalf {
+		/*background-color: lightgray;*/
+		text-align: center;
+		color: white;
+		font-size: 45px;
+		padding-top: 10px;
+	}
+
+	.doppler {
+		/*background-color: orange;*/
+		color: rgb(46,49,146);
+		text-align: center;
+		font-size: 20px;
+		padding-top: 15px;
+	}
+	/* search bar content */
+	.searchContainer {
+		text-align: center;
+		font-size: 30px;
+		padding-top: 35px;
+	}
+
+	.outerText {
+		position: relative;
+		right: 95px;
+		color: white;
+		padding-right: 10px;
+		padding-bottom: 25px;
+	}
+
+	.searchBar {
+		background-color: rgb(46,49,146);
+		border: none;
+		height: 35px;
+		padding-left: 25px;
+		width: 250px;
+		font-size: 27px;
+	}
+
+	.submitButton {
+		background-color: rgb(127,137,204);
+		color: white;
+		border: none;
+		position: relative;
+		right: 7px;
+		bottom: 5px;
+		height: 37px;
+		width: 82px;
+		font-size: 16px;
+	}
+
+	.tempMap {
+		display: flex;
+		position: relative;
+		height: 500px;
+	}
+
+	/* holds the actual information of weather */
+	.current {
+		display: inline;
+		padding-top: 45px;
+		padding-left: 65px;
+		color: white;
+		font-family: "Saira Extra Condensed", sans-serif;
+	}
+
+	.weatherImg {
+		position: relative;
+		bottom: 40px;
+		padding-left: 50px;
+		width: 300px;
+		height: 250px;
+	}
+
+	.timeTemp {
+		display: flex;
+		position: relative;
+		bottom: 45px;
+		left: 20px;
+	}
+
+	.currentContent {
+		font-size: 50px;
+		position: relative;
+		left: 45px;
+	}
+
+	.currentTime {
+		text-align: center;
+	}
+
+	.line {
+		color: black;
+		height: 85px;
+	}
+
+	.tempDegree {
+		display: flex;
+		position: relative;
+		right: 45px;
+	}
+
+	.temp {
+		font-size: 105px;
+		position: relative;
+		bottom: 5px;
+	}
+
+	.degree {
+		font-size: 75px;
+		padding-left: 10px;
+	}
+
+	/* this sections is for the topography map */
+	.map {
+		display: none;
+	}
+
+	.button {
+		text-align: center;
+		position: relative;
+		bottom: 45px;
+		height: 60px;
+	}
+
+	#arrowUpClick {
+		background-color: transparent;
+		color: white;
+		font-size: 125px;
+		height: 60px;
+		border-style: none;
+		font-weight: lighter;
+	}
+
+	#arrowDownClick {
+		background-color: transparent;
+		color: rgb(46,49,146);
+		font-size: 125px;
+		height: 60px;
+		border-style: none;
+		font-weight: lighter;
+		position: relative;
+		bottom: 25px;
+	}
+
+	.disappear {
+		display: none;
+	}
+
+	.appear {
+		display: block;
+	}
+
+	.weatherBlock {
+		display: flex;
+		justify-content: center;
+		font-family: "Saira Extra Condensed", sans-serif;
+		height: 120px;
+		padding-top: 8px;
+	}
+
+	.time {
+		position: relative;
+		right: 50px;
+		margin-top: 40px;
+		font-size: 30px;
+	}
+
+	.degrees {
+		position: relative;
+		left: 50px;
+		margin-top: 15px;
+		font-size: 90px;
+	}
+
+	.image {
+		width: 100px;
+		height: 100px;
+	}
+}
+
+@media(min-width: 460px) and (max-width: 810px) {
+	#gradient {
+		height: 518px;
+		background-image: linear-gradient(rgb(73,138,220), rgb(98,59,156));
+	}
+
+	.topText {
+		font-family: "IBM Plex Sans", sans-serif;
+		font-weight: 500;
+		position: relative;
+		top: 65px;
+	}
+
+	.weatherHeaders {
+		/*position: relative;
 		top: 75px;
-		left: 125px;
+		left: 7%;*/
 	}
 
 	.localName {
-		background-color: lightgray;
+		display: flex;
+		justify-content: center;
 		color: white;
+		font-size: 38px;
+	}
+
+	.doppler {
+		/*background-color: orange;*/
+		color: rgb(46,49,146);
+		text-align: center;
+		font-size: 30px;
+		padding-top: 10px;
+	}
+	/* search bar content */
+	.searchContainer {
+		display: flex;
+		justify-content: center;
+		font-size: 20px;
+		padding-top: 35px;
+	}
+
+	.outerText {
+		color: white;
+		padding-right: 10px;
+	}
+
+	.searchBar {
+		background-color: rgb(46,49,146);
+		border: none;
+		height: 25px;
+		padding-left: 25px;
+		width: 250px;
+		font-size: 20px;
+	}
+
+	.submitButton {
+		background-color: rgb(127,137,204);
+		color: white;
+		border: none;
+		position: relative;
+		left: 15px;
+		width: 80px;
+		font-size: 16px;
+	}
+
+	.tempMap {
+		display: flex;
+	}
+
+	/* holds the actual information of weather */
+	.current {
+		display: inline;
+		padding-top: 45px;
+		padding-left: 65px;
+		color: white;
+		font-family: "Saira Extra Condensed", sans-serif;
+	}
+
+	.weatherImg {
+		position: relative;
+		bottom: 75px;
+		width: 225px;
+		height: 100%;
+		padding-left: 85px;
+	}
+
+	.timeTemp {
+		display: flex;
+		position: relative;
+		left: 55px;
+		bottom: 100px;
+	}
+
+	.currentContent {
+		font-size: 40px;
+		position: relative;
+		left: 45px;
+	}
+
+	.line {
+		color: black;
+		height: 65px;
+	}
+
+	.currentTime {
+		text-align: center;
+	}
+
+	.tempDegree {
+		display: flex;
+		position: relative;
+		right: 45px;
+	}
+
+	.temp {
+		font-size: 95px;
+		position: relative;
+		bottom: 5px;
+	}
+
+	.degree {
+		font-size: 75px;
+		padding-left: 10px;
+	}
+
+	/* this sections is for the topography map */
+	.map {
+		position: relative;
+		left: 80px;
+		top: 30px;
+	}
+
+	.baseImg {
+		height: 240px;
+		width: 240px;
+		filter: grayscale(100%);
+		border-radius: 50%;
+		position: absolute;
+	}
+
+	.cityNames, .radarImg {
+		height: 240px;
+		width: 240px;
+		border-radius: 50%;
+		position: absolute;
+	}
+
+	.button {
+		display: none;
+	}
+
+	#weatherBlocks {
+		display: flex;
+		justify-content: center;
+	}
+
+	.weatherBlock {
+		text-align: center;
+		font-family: "Saira Extra Condensed", sans-serif;
+		padding-right: 40px;
+		padding-left: 40px;
+		height: 120px;
+		padding-top: 8px;
+	}
+
+	.bottomLine {
+		margin: 0px;
+		height: 331px;
+	}
+
+	.time {
+		font-size: 20px;
+		padding-top: 30px;
+	}
+
+	.image {
+		width: 80px;
+		height: 80px;
+		padding-top: 30px;
+	}
+
+	.degrees {
+		font-size: 70px;
+		padding-top: 25px;
+		padding-bottom: 0px;
+	}
+}
+
+@media(min-width: 810px){
+	#gradient {
+		height: 518px;
+		background-image: linear-gradient(rgb(73,138,220), rgb(98,59,156));
+	}
+	/* used to create the title and text */
+	.topText {
+		font-family: "IBM Plex Sans", sans-serif;
+		font-weight: 500;
+		position: relative;
+		top: 75px;
+		left: 7%;
+	}
+
+	.weatherHeaders {
+		/*position: relative;
+		top: 75px;
+		left: 7%;*/
+	}
+
+	.localName {
+		/*background-color: lightgray;*/
+		color: white;
+		display: flex;
 		font-size: 50px;
 	}
 
 	.doppler {
-		background-color: orange;
+		/*background-color: orange;*/
+		color: rgb(46,49,146);
 		font-size: 35px;
+		padding-top: 20px;
+	}
+	/* text next to search bar */
+	
+	/* search bar content */
+	.searchContainer {
+		display: flex;
+		font-size: 25px;
+		padding-top: 35px;
+	}
+
+	.outerText {
+		color: white;
+		padding-right: 25px;
+	}
+
+	.searchBar {
+		background-color: rgb(46,49,146);
+		border: none;
+		height: 30px;
+		padding-left: 25px;
+		width: 300px;
+		font-size: 23px;
+	}
+
+	.submitButton {
+		background-color: rgb(127,137,204);
+		color: white;
+		border: none;
+		position: relative;
+		left: 25px;
+		width: 80px;
+		font-size: 16px;
+	}
+
+	/* holds the actual information of weather */
+	.tempMap {
+		display: flex;
+	}
+
+	.current {
+		display: flex;
+		padding-top: 45px;
+		padding-left: 65px;
+		color: white;
+		font-family: "Saira Extra Condensed", sans-serif;
+	}
+
+	.currentContent {
+		font-size: 40px;
+		padding-top: 40px;
+		position: relative;
+		right: 300px;
+	}
+
+	.line {
+		display: none;
+	}
+
+	.currentTime {
+		text-align: center;
+		padding-top: 10px;
+	}
+
+	.weatherImg {
+		padding-left: 55px;
+		width: 250px;
+		height: 100%;
+		position: relative;
+		left: 90px;
+	}
+
+	.timeTemp {
+		display: flex;
+	}
+
+	.tempDegree {
+		display: flex;
+	}
+
+	.temp {
+		font-size: 95px;
+		padding-left: 40px;
+		padding-top: 30px;
+	}
+
+	.degree {
+		font-size: 75px;
+		padding-left: 10px;
+		padding-top: 30px;
+	}
+
+	/* this sections is for the topography map */
+	.map {
+		position: relative;
+		left: 200px;
+		bottom: 170px; 
+	}
+
+	.baseImg {
+		height: 380px;
+		width: 380px;
+		filter: grayscale(100%);
+		border-radius: 50%;
+		position: absolute;
+	}
+	.cityNames, .radarImg {
+		height: 380px;
+		width: 380px;
+		border-radius: 50%;
+		position: absolute;
+	}
+
+	.button {
+		display: none;
+	}
+
+	#weatherBlocks {
+		display: flex;
+		justify-content: center;
+	}
+
+	.weatherBlock {
+		text-align: center;
+		font-family: "Saira Extra Condensed", sans-serif;
+		height: 120px;
+		padding-top: 8px;
+		padding-right: 100px;
+		padding-left: 100px;
+	}
+
+	.bottomLine {
+		margin: 0px;
+		height: 250px;
+		margin-top: 35px;
+	}
+
+	.time {
+		font-size: 30px;
+		padding-top: 30px;
+	}
+
+	.image {
+		width: 100px;
+		height: 100px;
+		padding-top: 20px;
+	}
+
+	.degrees {
+		font-size: 80px;
+		padding-top: 20px;
+		padding-bottom: 0px;
 	}
 }
