--- a/HW5/lango.css
+++ b/HW5/lango.css
@@ -1,97 +1,295 @@
-body {
-	font-family: helvetica, sans-serif;
+@media (max-width: 460px) {
+	body {
+		font-family: helvetica, sans-serif;
+	}
+
+	main.container {
+		height: 851px;
+	}
+
+	div.navContent {
+		/*background-color: orange;*/
+		padding: 3%;
+	}
+
+	div.topNav {
+		display: flex;
+		/*background-color: lightblue;*/
+		justify-content: space-between;
+		width: 310px;
+	}
+
+	button.review {
+		background-color: #606B9B;
+		color: white;
+		border: none;
+		border-radius: 10px;
+		height: 45px;
+		width: 100px;
+		font-size: 14px;
+	}
+
+	p.title {
+		color: #606B9B;
+		font-size: 50px;
+		font-family: Raleway;
+		font-weight: 700;
+	}
+
+	div.flashcards {
+		/*background-color: lightgray;*/
+		height: 62%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	input.textBox {
+		height: 200px;
+		width: 370px;
+		position: relative;
+		//top: 135px;
+		resize: none;
+		text-align: center;
+		font-size: 30px;
+		border-style: solid;
+		border-width: medium;
+		border-color: lightgrey;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	input#inputCard {
+		margin-bottom: 20px;
+	}
+
+	div.save {
+		/*background-color: pink;*/
+		display: flex;
+		justify-content: flex-end;
+		height: 98px;
+	}
+
+	button#saveButton {
+		background-color: #70C7A9;
+		color: white;
+		border: none;
+		border-radius: 10px;
+		height: 50px;
+		width: 110px;
+		font-size: 17px;
+		position: relative;
+		right: 40px;
+	}
+
+	div.userContainer {
+		background-color: #606B9B;
+		height: 7.2%;
+	}
+
+	p.username {
+		color: white;
+		padding-top: 17px;
+		text-align: center;
+		font-size: 17px;
+	}
 }
 
-main.container {
-	height: 851px;
+@media (min-width: 460px) and (max-width: 810px) {
+	body {
+		font-family: helvetica, sans-serif;
+	}
+
+	main.container {
+		height: 851px;
+	}
+
+	div.navContent {
+		/*background-color: orange;*/
+		padding: 3%;
+	}
+
+	div.topNav {
+		display: flex;
+		/*background-color: lightblue;*/
+		justify-content: space-between;
+		width: 65%;
+		padding-left: 25px;
+	}
+
+	button.review {
+		background-color: #606B9B;
+		color: white;
+		border: none;
+		border-radius: 15px;
+		height: 60px;
+		width: 170px;
+		font-size: 25px;
+	}
+
+	p.title {
+		color: #606B9B;
+		font-size: 70px;
+		font-family: Raleway;
+		font-weight: 700;
+	}
+
+	div.flashcards {
+		/*background-color: lightgray;*/
+		height: 62%;
+		display: flex;
+		justify-content: space-evenly;
+	}
+
+	input.textBox {
+		height: 320px;
+		width: 310px;
+		position: relative;
+		top: 135px;
+		resize: none;
+		text-align: center;
+		font-size: 30px;
+		border-style: solid;
+		border-width: medium;
+		border-color: lightgrey;
+	}
+
+	input#inputCard {
+		
+	}
+
+	input#outputCard {
+		
+	}
+
+	div.save {
+		/*background-color: pink;*/
+		display: flex;
+		justify-content: flex-end;
+		height: 144px;
+	}
+
+	button#saveButton {
+		background-color: #70C7A9;
+		color: white;
+		border: none;
+		border-radius: 15px;
+		height: 65px;
+		width: 170px;
+		font-size: 25px;
+		position: relative;
+		right: 60px;
+	}
+
+	div.userContainer {
+		background-color: #606B9B;
+		height: 7.2%;
+	}
+
+	p.username {
+		color: white;
+		padding-top: 17px;
+		text-align: center;
+		font-size: 25px;
+	}
 }
 
-div.navContent {
-	/*background-color: orange;*/
-	padding: 3%;
-}
+@media (min-width: 810px) {
+	body {
+		font-family: helvetica, sans-serif;
+	}
 
-div.topNav {
-	display: flex;
-	/*background-color: lightblue;*/
-	justify-content: space-between;
-	width: 60%;
-}
+	main.container {
+		height: 851px;
+	}
 
-button.review {
-	background-color: #606B9B;
-	color: white;
-	border: none;
-	border-radius: 15px;
-	height: 60px;
-	width: 220px;
-	font-size: 25px;
-}
+	div.navContent {
+		/*background-color: orange;*/
+		padding: 3%;
+	}
 
-p.title {
-	color: #606B9B;
-	font-size: 70px;
-	font-family: Raleway;
-	font-weight: 700;
-}
+	div.topNav {
+		display: flex;
+		/*background-color: lightblue;*/
+		justify-content: space-between;
+		width: 60%;
+	}
 
-div.flashcards {
-	/*background-color: lightgray;*/
-	height: 60%;
-	display: flex;
-	justify-content: space-evenly;
-}
+	button.review {
+		background-color: #606B9B;
+		color: white;
+		border: none;
+		border-radius: 15px;
+		height: 60px;
+		width: 220px;
+		font-size: 25px;
+	}
 
-input.textBox {
-	height: 420px;
-	width: 500px;
-	position: relative;
-	top: 25px;
-	resize: none;
-	text-align: center;
-	font-size: 30px;
-	border-style: solid;
-	border-width: medium;
-	border-color: lightgrey;
-}
+	p.title {
+		color: #606B9B;
+		font-size: 70px;
+		font-family: Raleway;
+		font-weight: 700;
+	}
 
-input#inputCard {
-	position: relative;
-	left: 50px;
-}
+	div.flashcards {
+		/*background-color: lightgray;*/
+		height: 60%;
+		display: flex;
+		justify-content: space-evenly;
+	}
 
-input#outputCard {
-	position: relative;
-	right: 50px;
-}
+	input.textBox {
+		height: 420px;
+		width: 500px;
+		position: relative;
+		top: 25px;
+		resize: none;
+		text-align: center;
+		font-size: 30px;
+		border-style: solid;
+		border-width: medium;
+		border-color: lightgrey;
+	}
 
-div.save {
-	/*background-color: pink;*/
-	display: flex;
-	justify-content: flex-end;
-	height: 14%
-}
+	input#inputCard {
+		position: relative;
+		left: 50px;
+	}
 
-button#saveButton {
-	background-color: #70C7A9;
-        color: white;
-        border: none;
-        border-radius: 15px;
-        height: 65px;
-        width: 170px;
-        font-size: 25px;
-	position: relative;
-	right: 160px;
-}
+	input#outputCard {
+		position: relative;
+		right: 50px;
+	}
 
-div.userContainer {
-	background-color: #606B9B;
-	height: 7.2%;
-}
+	div.save {
+		/*background-color: pink;*/
+		display: flex;
+		justify-content: flex-end;
+		height: 14%;
+	}
 
-p.username {
-	color: white;
-	padding-top: 17px;
-	text-align: center;
-	font-size: 25px;
+	button#saveButton {
+		background-color: #70C7A9;
+		color: white;
+		border: none;
+		border-radius: 15px;
+		height: 65px;
+		width: 170px;
+		font-size: 25px;
+		position: relative;
+		right: 160px;
+	}
+
+	div.userContainer {
+		background-color: #606B9B;
+		height: 7.2%;
+	}
+
+	p.username {
+		color: white;
+		padding-top: 17px;
+		text-align: center;
+		font-size: 25px;
+	}
 }
