--- a/HW5/lango.css
+++ b/HW5/lango.css
@@ -3,13 +3,9 @@
 		font-family: helvetica, sans-serif;
 	}
 
-	main.container {
-		height: 851px;
-	}
-
 	div.navContent {
 		/*background-color: orange;*/
-		padding: 3%;
+		padding: 5%;
 	}
 
 	div.topNav {
@@ -38,7 +34,7 @@
 
 	div.flashcards {
 		/*background-color: lightgray;*/
-		height: 62%;
+		height: 68vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -46,9 +42,7 @@
 
 	input.textBox {
 		height: 200px;
-		width: 370px;
-		position: relative;
-		//top: 135px;
+		width: 90vw;
 		resize: none;
 		text-align: center;
 		font-size: 30px;
@@ -67,7 +61,6 @@
 		/*background-color: pink;*/
 		display: flex;
 		justify-content: flex-end;
-		height: 98px;
 	}
 
 	button#saveButton {
@@ -79,17 +72,19 @@
 		width: 110px;
 		font-size: 17px;
 		position: relative;
-		right: 40px;
+		right: 21px;
 	}
 
 	div.userContainer {
 		background-color: #606B9B;
-		height: 7.2%;
+		width: 100%;
+		position: absolute;
+		bottom: 0px;
 	}
 
 	p.username {
 		color: white;
-		padding-top: 17px;
+		padding: 17px;
 		text-align: center;
 		font-size: 17px;
 	}
@@ -100,13 +95,10 @@
 		font-family: helvetica, sans-serif;
 	}
 
-	main.container {
-		height: 851px;
-	}
-
 	div.navContent {
 		/*background-color: orange;*/
-		padding: 3%;
+		padding: 5%;
+		margin-bottom: 40px;
 	}
 
 	div.topNav {
@@ -136,7 +128,7 @@
 
 	div.flashcards {
 		/*background-color: lightgray;*/
-		height: 62%;
+		height: 52vh;
 		display: flex;
 		justify-content: space-evenly;
 	}
@@ -144,8 +136,6 @@
 	input.textBox {
 		height: 320px;
 		width: 310px;
-		position: relative;
-		top: 135px;
 		resize: none;
 		text-align: center;
 		font-size: 30px;
@@ -154,19 +144,10 @@
 		border-color: lightgrey;
 	}
 
-	input#inputCard {
-		
-	}
-
-	input#outputCard {
-		
-	}
-
 	div.save {
 		/*background-color: pink;*/
 		display: flex;
 		justify-content: flex-end;
-		height: 144px;
 	}
 
 	button#saveButton {
@@ -201,18 +182,15 @@
 		font-family: helvetica, sans-serif;
 	}
 
-	main.container {
-		
-	}
-
 	div.navContent {
-		background-color: orange;
+		/*background-color: orange;*/
 		padding: 3%;
+		margin: 12px;
 	}
 
 	div.topNav {
 		display: flex;
-		background-color: lightblue;
+		/*background-color: lightblue;*/
 		justify-content: space-between;
 		width: 60%;
 	}
@@ -235,17 +213,15 @@
 	}
 
 	div.flashcards {
-		background-color: lightgray;
-		height: 60%;
+		/*background-color: lightgray;*/
+		height: 55vh;
 		display: flex;
 		justify-content: space-evenly;
 	}
 
 	input.textBox {
-		height: 420px;
-		width: 500px;
-		position: relative;
-		top: 25px;
+		height: 360px;
+		width: 480px;
 		resize: none;
 		text-align: center;
 		font-size: 30px;
@@ -265,10 +241,9 @@
 	}
 
 	div.save {
-		background-color: pink;
+		/*background-color: pink;*/
 		display: flex;
 		justify-content: flex-end;
-		height: 14%;
 	}
 
 	button#saveButton {
@@ -280,12 +255,12 @@
 		width: 170px;
 		font-size: 25px;
 		position: relative;
-		right: 160px;
+		right: 224px;
 	}
 
 	div.userContainer {
 		background-color: #606B9B;
-		position: absolute;
+		position: fixed;
 		width: 100%;
 		bottom: 0;
 	}
